--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Cambia el link del favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="theme-color" content="#367C2B" /> <!-- Color verde John Deere en barra de estado -->
+    <title>SARTOR | Gestión de Flota</title>
+    <meta name="description" content="Dashboard de gestión de combustible y flota para SARTOR John Deere.">
   </head>
   <body>
     <div id="root"></div>
